tests/ui/span/drop-location-span-error-rust-2021-incompatible-closure-captures-93117.stderr
error: this file contains an unclosed delimiter
  --> $DIR/drop-location-span-error-rust-2021-incompatible-closure-captures-93117.rs:23:52
   |
LL | trait C{async fn new(val: T) {}
   |        - unclosed delimiter
...
LL |
   |                                                    ^

error: aborting due to 1 previous error

